--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   oled-stats:
     build: .
     container_name: oled-stats
+    network_mode: host
     privileged: true
     devices:
       - /dev/i2c-1:/dev/i2c-1
